Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-32873

Issue Markers need to be disabled/enabled before being displayed

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • Qt Creator 17.0.0-rc1
    • Qt Creator 16.0.1, Qt Creator 17.0.0-beta1
    • Axivion
    • None
    • ee6ad4d23 (17.0)

    Description

      Found when trying to reproduce a problem betzdl reported from a customer site. Not sure, if it is the same issue he had, but still it is an issue I think.

      Demonstration video is taken with v16.0.1, but I can also reproduce with 17.0 / 24a19e079c64b42fae333be00039084e89f9c2de

      Attachments

        Issue Links

          For Gerrit Dashboard: QTCREATORBUG-32873
          # Subject Branch Project Status CR V

          Activity

            People

              cstenger Christian Stenger
              daniel_hofmann Daniel Hofmann
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes