Axivion: Fix handling of opened documents

If the project info of the dashboard changes we have to
explicitly trigger an update of the markers.

Fixes: QTCREATORBUG-32873
Change-Id: Ifb66ac3ce26e184ebbbe8c5633383544fc3c23fb
Reviewed-by: hjk <hjk@qt.io>
Reviewed-by: Mohammad Mehdi Salem Naraghi <mehdi.salem@qt.io>